<package>
  <name>car_model_t4</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_model_t4</p>
    <p>This package contains configuration data, 3D models and launch files
for car_model_t4 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>

  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
